univention-management-console-frontend (1.0.28-1) unstable; urgency=low  .    * disabled scrollbars for the main window    * forced vertical scrollbars for grids    (Bug #22881)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.0/ucs@26714 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/css/style.css
+++ b/management/univention-management-console-frontend/css/style.css
@@ -5,6 +5,8 @@ html {
 body {
 	font-family: Helvetica, "Helvetica Neue", Arial, Geneva, sans-serif;
 	color: #414142;
+	/* disable scrollbars for the main window, long combo boxes may cause scrollbars to be shown */
+	overflow: hidden;
 }
 
 a {
@@ -308,4 +310,12 @@ form {
 .umcCheckBox {
 	margin-right: 23.5em !important;
 }
+
+/* force scrollbars for grids, otherwise vertical scrollbars may be shown is particular circumstances */
+.umcGrid .dojoxGridScrollbox {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
+
 
